k8s/manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: saas-go-web-app
spec:
  selector:
    app: saas-go-web-app
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
